--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
    </audio>
   <!-- Nav Bar -->
   <nav>
-    <ul class="sidebar">
-      <li onclick="hideSidebar()"><a href="#"><i class="fa-solid fa-xmark"></i></a></li>
+    <ul onclick="hideSidebar()" class="sidebar">
+      <li ><a href="#"><i class="fa-solid fa-xmark"></i></a></li>
       <li><a href="#skills-section"><i class="fas fa-tv"></i>Skills</a></li>
       <li><a href="#testimonies"><i class="fas fa-comment"></i>Testimony</a></li>
       <li><a href="#project-section"><i class="fas fa-folder"></i>Projects</a></li>
@@ -70,12 +70,12 @@
        <p>Hello my name is Farouq George,I am a novice website developer but i still possess the skills to create a moderate web page</p>
 
       <div class="links">
-        <a href="#skills-section">
+        <a  href="#skills-section">
           <i class="fa-solid fa-code"></i>
           <span>Skills</span>
           </a>
 
-          <a href="#testimonies">
+          <a  href="#testimonies">
             <i class="fa-solid fa-pen"></i>
             <span>Testimony</span>
           </a>
@@ -85,11 +85,11 @@
               <span>Projects</span>
               </a>
 
-
-          <a class="contact" href="#contact">
+          <a  href="#contact">
             <i class="fa-solid fa-envelope"></i>
             <span>Contact</span>
         </a>
+        
       </div>
       <a class="btn" href="#contact">
         <button class="start-btn" style="height: 50px; width: 350px;">Lets Get Started ></button>
