--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
     <section class="hero-section">
       <div class="text">
        <h2>Hi, I'm George <span>🧐👋</span> </h2>
-       <p>Hello my name is Farouq George,I am a novice website developer but i still possess the skills to create a moderate web page</p>
+       <p>
+        Hello, my name is Farouq George. I'm a novice web developer, but I have the skills to create well-structured, functional web pages</p>
 
       <div class="links">
         <a  href="#skills-section">
@@ -109,7 +110,7 @@
     <section id="skills-section">
       <h2  style="display: flex; align-items: center; justify-content: center; color: white;" >Skills</h2>
       <div class="text">
-       Over my time of coding  ive been able to gain a decent mastery of html,css and MYSQL but i shall still strive to learn more to add more weight to my skills and some improvements to my works so i can become a valuable asset.
+        Over time, I’ve gained a decent mastery of HTML, CSS, and MySQL. However, I remain committed to continuous learning to strengthen my skills and enhance the quality of my work, ultimately becoming a valuable asset.
       </div>
 
       <div class="cells">
@@ -151,7 +152,7 @@
 
       <div class="group">
      <div class="text">
-      Welcome to my project section.In this section i shall  be displaying some of the projects ive worked on with some being accomplished through my efforts and others with aid
+      Welcome to my project section. Here, I’ll be showcasing some of the projects I’ve worked on some completed through my individual efforts, and others with collaborative support.
      </div>
 
      <div class="project-list">
@@ -197,7 +198,7 @@
       
       <div class="group">
         <div class="text">
-        <h1 style="font-weight: normal;">Hello, thank you taking your time to go through my portfolio, its not perfect but some adjustments shall be made to it but if  have taken interest in my skills then you can contact me with the form provided or directly contact on my whatsapp or gmail</h1>
+        <h1 style="font-weight: normal;">Hello, and thank you for taking the time to go through my portfolio. While it’s not perfect, I’m continually working on improvements. If you’re interested in my skills, feel free to reach out using the contact form provided, or contact me directly via WhatsApp or Gmail.</h1>
         
         <p> <i class="fa-brands fa-whatsapp"></i>whatsapp:+23409060172663</p>
         <p> <i class="fa-solid fa-envelope"></i>Georgefarouq05@gmail.com</p>
