--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <!-- section 2: Skills-->
     <section id="skills-section">
-      <h2  style="display: flex; align-items: center; justify-content: center; color: white;" >Skills</h2>
+      <h2  style="display: flex; align-items: center; justify-content: center; color: white;" >SKILLS</h2>
       <div class="text">
         Over time, I’ve gained a decent mastery of HTML, CSS, and MySQL. However, I remain committed to continuous learning to strengthen my skills and enhance the quality of my work, ultimately becoming a valuable asset.
       </div>
@@ -132,7 +132,7 @@
 
     <!-- section 3 :Testimony -->
     <section id="testimonies" class="testimony-section">
-      <h2 style="display: flex; align-items: center; justify-content: center; color: white;">Testimony</h2>
+      <h2 style="display: flex; align-items: center; justify-content: center; color: white;">TESTIMONY</h2>
 
       <div class="group">
         <div class="person-details">
@@ -148,7 +148,7 @@
 
     <!-- SECTION 4: PROJECTS -->
      <section id="project-section">
-      <h2 style="display: flex; align-items: center; justify-content: center; color: white;font-size: 35px;">Projects</h2>
+      <h2 style="display: flex; align-items: center; justify-content: center; color: white;font-size: 35px;">PROJECTS</h2>
 
       <div class="group">
      <div class="text">
@@ -168,7 +168,8 @@
         <img class="img" src="Sunset.jpg" alt="Project Two" />
         <div class="project-content">
           <h3 class="project-title">Multi-Webpage Website</h3>
-          <p class="project-description">A simple website with multiple webpages</p>
+          <p class="project-description">In Progress
+          </p>
         </div>
       </a>
         </div>
@@ -194,7 +195,7 @@
 
     <!-- section 5: Contact-->
      <section id="contact" class="contact-section">
-      <h2 style="display: flex; align-items: center; justify-content: center; color: white;">Contact</h2>
+      <h2 style="display: flex; align-items: center; justify-content: center; color: white;">CONTACT</h2>
       
       <div class="group">
         <div class="text">
